Added receiving tournaments
