# docs/swagger.json
@@ -883,10 +883,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.UserTeamResponse"
-                            }
+                            "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_players.UserTeamResponse"
                         }
                     },
                     "400": {
@@ -937,7 +934,7 @@
                         "required": true
                     },
                     {
-                        "description": "Список идентификаторов команд",
+                        "description": "Список идентификаторов игроков",
                         "name": "team",
                         "in": "body",
                         "required": true,
@@ -1004,7 +1001,7 @@
                         "required": true
                     },
                     {
-                        "description": "Список идентификаторов команд",
+                        "description": "Список идентификаторов игроков",
                         "name": "team",
                         "in": "body",
                         "required": true,
@@ -1031,6 +1028,80 @@
                     },
                     "401": {
                         "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/pkg_api.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/pkg_api.Error"
+                        }
+                    }
+                }
+            }
+        },
+        "/tournaments": {
+            "get": {
+                "description": "Получение турниров",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "tournament"
+                ],
+                "summary": "Получение турниров",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "profileID",
+                        "name": "profileID",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "tournamentID",
+                        "name": "tournamentID",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "NHL",
+                            "KHL"
+                        ],
+                        "type": "string",
+                        "description": "league",
+                        "name": "league",
+                        "in": "query"
+                    },
+                    {
+                        "enum": [
+                            "not_yet_started",
+                            "started",
+                            "finished",
+                            "active"
+                        ],
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.Tournament"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/pkg_api.Error"
                         }
@@ -1732,9 +1803,6 @@
         "github_com_Frozen-Fantasy_fantasy-backend_git_pkg_models_tournaments.Tournament": {
             "type": "object",
             "properties": {
-                "TimeStart": {
-                    "type": "integer"
-                },
                 "deposit": {
                     "type": "integer"
                 },
@@ -1758,6 +1826,15 @@
                 },
                 "timeEnd": {
                     "type": "integer"
+                },
+                "timeEndTS": {
+                    "type": "string"
+                },
+                "timeStart": {
+                    "type": "integer"
+                },
+                "timeStartTS": {
+                    "type": "string"
                 },
                 "title": {
                     "type": "string"
